--- a/asite/package.json
+++ b/asite/package.json
@@ -8,9 +8,15 @@
         "dev": "webpack-dev-server --open"
     },
     "dependencies": {
-        "lodash": "^4.17.20"
+        "dayspan-vuetify": "^0.4.0",
+        "lodash": "^4.17.20",
+        "moment": "^2.27.0",
+        "vue": "^2.6.11"
     },
     "devDependencies": {
+        "@babel/core": "^7.11.1",
+        "@babel/preset-env": "^7.11.0",
+        "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^4.2.1",
         "file-loader": "^6.0.0",
@@ -19,6 +25,8 @@
         "sass-loader": "^9.0.3",
         "style-loader": "^1.2.1",
         "url-loader": "^4.1.0",
+        "vue-loader": "^15.9.3",
+        "vue-template-compiler": "^2.6.11",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0"
